style: fix series section in dark mode

--- a/themes/nicesima/assets/css/_common/_partials/post.scss
+++ b/themes/nicesima/assets/css/_common/_partials/post.scss
@@ -91,6 +91,10 @@
         border-bottom: 1px solid $light-border-color;
         padding-bottom: .5em;
         padding-left: .75em;
+
+        .dark-theme & {
+          border-color: $dark-border-color;
+        }
       }
     }
 
